# cgalinterp

./: CMakeLists.txt  setup.py
src/: cgalinterp-config.h.in  cgalinterp.cpp
